# window-cleaning-robot

./: .gitignore  README.md  control-sim.md
control-sim/: requirements.txt
control-sim/sample/: __main__.py  gui.py  map_module.py  robot_module.py
controls/: calibration.py  camera.py  command_client.py  config.yaml  kinematics.py  main.py  motor_controller.py  serial_stream.py  square_client.py  visualizer.py  viz_client.py
controls-software/: main.py
controls-software/controls/: STMoffboard.py  STMonboard.py
gz-simulator/: README.md  Wall
gz-simulator/Test/: model.sdf
gz-simulator/src/pulley_package/: package.xml  setup.cfg  setup.py
python-sim/: README.md  cable_robot_simulator.py  demo_simulatory.py
ros_package/: CMakeLists.txt  README.md  package.xml
ros_package/config/: robot_params.yaml
ros_package/launch/: sim.launch
ros_package/msg/: CleaningResult.msg  MotorCommand.msg  RobotState.msg  Stop.msg
ros_package/nodes/: mock_motor_stm32_bridge.py  mock_sensor_stm32_bridge.py  mock_vision_node.py  motion_controller.py  navigation_node.py
ros_package/srv/: AbortMission.srv  SetCleaningArea.srv
sensing/: apriltag.py
sensing/obstacle_tof/: obstacle_tof.ino
sensing/stm_onboard/: main.c
sensing/stm_onboard/testinggrounds/: .cproject  .project  testinggrounds.ioc  testinggrounds.launch
sensing/vision_camera/CLIP-SAM/: README.md  main.ipynb
sensing/windist_ultrasonic/: windist_ultrasonic.ino
sensing/window_classifier/: inference_stream.py  master_control.py  onboard_camera.py  read_from_cam.py  split.py  test_model.py  train.py
(+37 files in other folders)
